fix: Tooltip css no longer clipped

--- a/webapp/src/components/ActivityPage/ActivityPage.css
+++ b/webapp/src/components/ActivityPage/ActivityPage.css
@@ -1,3 +1,7 @@
+.ActivityPage.container {
+  overflow: visible;
+}
+
 .ActivityPage .section-title {
   margin-bottom: 10px;
   font-weight: bolder;
